修改参数构建方式以兼容更多类型的sql语句