@@ -3,38 +3,55 @@ package com.hxuanyu.jdolt.util.builder;
 import com.hxuanyu.jdolt.model.SqlExecuteResult;
 import com.hxuanyu.jdolt.util.validator.MethodConstraintValidator;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
+import java.util.*;
 
 public abstract class AbstractParamBuilder {
+    
+    public enum ParamType {
+        TABLE_NAME,
+        COLUMN_LIST,
+        WHERE_CONDITION,
+        ORDER_BY,
+        GROUP_BY,
+        HAVING,
+        LIMIT,
+        OFFSET,
+        JOIN,
+        PROCEDURE_PARAMS,
+        FUNCTION_PARAMS,
+        TABLE_FUNCTION_PARAMS,
+        SCHEMA_NAME,
+        DATABASE_NAME,
+        DISTINCT,
+        UNION,
+        UNION_ALL,
+        VALUES,
+        SET_CLAUSE,
+        INTO_CLAUSE,
+        FLAGS,
+    }
+    
     protected final MethodConstraintValidator validator;
 
     public AbstractParamBuilder(Class<?> clazz) {
         this.validator = new MethodConstraintValidator(clazz);
     }
 
-    // flags 属性由接口维护
-    List<String> flags = new ArrayList<>();
 
-    // 默认方法：添加单个参数
-    public void addFlag(String flag) {
-        flags.add(flag);
+    // params 属性由接口维护，保存了一系列键值对
+    Map<ParamType, List<String>> sqlParams = new HashMap<>();
+
+    public void addParam(ParamType type, String param) {
+        sqlParams.computeIfAbsent(type, k -> new ArrayList<>()).add(param);
     }
 
-    // 默认方法：添加多个参数
-    public void addFlags(String... flags) {
-        this.flags.addAll(Arrays.asList(flags));
+    public void addParams(ParamType type, String... params) {
+        sqlParams.computeIfAbsent(type, k -> new ArrayList<>()).addAll(List.of(params));
     }
 
-    // 默认方法：获取所有参数
-    public String[] toProcedureArgs() {
-        return flags.toArray(new String[0]);
-    }
 
-    public String[] checkParam() {
+    public void checkParam() {
         validator.checkRequired();
-        return toProcedureArgs();
     }
 
     public abstract SqlExecuteResult execute();
